<resources>
    <string name="app_name">RomicPrometApp</string>


    //textView profile strings
    <string name="logout">Odjavi se</string>
    <string name="profile">Profil</string>
    <string name="name">Ime i Prezime</string>
    <string name="first_name">Ime</string>
    <string name="last_name">Prezime</string>
    <string name="password">********</string>
    <string name="pin">****</string>
    <string name="dateofbirth">DD/MM/YYYY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Traži</string>
    <string name="add">Dodaj</string>
    <string name="delete">Obriši</string>
    <string name="company">Poduzeće</string>
    <string name="load_address">Adresa utovara</string>
    <string name="unload_address">Adresa istovara</string>
    <string name="date">Datum</string>
    <string name="goods">Roba</string>
    <string name="number_neccessary_deliveries">Broj potrebnih tura</string>
    <string name="status">Status</string>
    <string name="contact">Kontakt</string>
    <string name="email">Email</string>
    <string name="add_chauffeurs">Dodijeli vozače</string>
    <string name="edit">Uredi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="page_title">Dogovoreni poslovi</string>
    <string name="sort">Sortiraj</string>
    <string name="filter">Filtriraj</string>
    <string name="number_of_finished_deliveries">Broj dodijeljenih tura</string>
    <string name="driver">Vozač</string>
    <string name="truck">Kamion</string>
    <string name="trailer">Prikolica</string>
    <string name="loand_and_unload_address">Adresa utovara i istovara</string>
    <string name="order">Redoslijed</string>
    <string name="page_profile">Profil</string>
    <string name="added_chauffeurs">Dodijeljeni vozači</string>
</resources>