<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/main_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rp_blue_background"
        tools:context=".fragments.DodjelaVozacaFragment"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/txtAdresaUtovara"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:text="@string/load_address"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/txtBrojTrazenihTura"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:text="@string/number_neccessary_deliveries"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/txtAdrsUtovarUnosDodjela"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:hint="Adresa utovara"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:gravity="left"
            android:layout_marginStart="10dp"
            android:textColor="@color/rp_blue"
            android:background="@drawable/white_box"/>
        <TextView
            android:id="@+id/txtBrojTrazenihTuraDodjela"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/white_box"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginStart="60dp"
            android:hint="8"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/rp_blue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/txtAdresaIstovara"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:text="@string/unload_address"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/txtBrojDodijeljenihTura"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:text="@string/number_of_finished_deliveries"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/txtAdresaIstovaraDodjela"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:background="@drawable/white_box"
            android:hint="Adresa istovara"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:gravity="left"
            android:layout_marginStart="10dp"
            android:textColor="@color/rp_blue"/>
        <TextView
            android:id="@+id/txtBrojDodijeljenihTuraDodjela"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/white_box"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginStart="60dp"
            android:hint="8"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/rp_blue"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/txtDodajVozace"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:text="@string/added_chauffeurs"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/txtVozac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:text="@string/driver"
            android:textColor="@color/rp_blue"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/txtKamion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/truck"
            android:textColor="@color/rp_blue"
            android:textSize="15sp"
            android:layout_marginLeft="40dp"/>

        <TextView
            android:id="@+id/txtPrikolica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:text="@string/trailer"
            android:textColor="@color/rp_blue"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:background="@drawable/white_box">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="411dp"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.49"
            tools:listitem="@layout/lista_dodijeljenih_vozaca" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">

        <ImageButton
            android:id="@+id/btnDodijeliVozacaKamionPrikolicuAdd"
            android:layout_width="56dp"
            android:layout_height="54dp"
            android:layout_margin="10dp"
            android:background="@color/rp_blue_background"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_add_circle" />
    </LinearLayout>

    </LinearLayout>
    </ScrollView>

</LinearLayout>