<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rp_blue_background"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:id="@+id/filterLayout">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort"
        android:textColor="@color/rp_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btnDatumSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/rp_blue_light"
            android:text="@string/date"
            android:textSize="9sp" />

        <Button
            android:id="@+id/btnPoduzeceSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/rp_blue_light"
            android:text="@string/company"
            android:textSize="9sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnStatusSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/rp_blue"
            android:text="@string/status"
            android:textSize="9sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/brojPrikaza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Broj prikaza"
            android:textColor="@color/rp_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPoduzeceSort"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtBrojPrikaza"
            android:layout_width="58dp"
            android:layout_height="47dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:inputType="number"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="0"/>
        <ImageButton
            android:id="@+id/btnAdd"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/rp_blue_background"
            app:srcCompat="@drawable/ic_add" />

        <ImageButton
            android:id="@+id/btnSubtract"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/rp_blue_background"
            app:srcCompat="@drawable/ic_remove" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btnFiltriraj"
            android:layout_width="252dp"
            android:layout_height="38dp"
            android:backgroundTint="@color/rp_blue"
            android:text="@string/filter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSubtract"
            app:layout_constraintVertical_bias="0.037" />
    </LinearLayout>
</LinearLayout>