<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:backgroundTint="@color/rp_blue_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linLayoutPoduzece">

            <ImageView
                android:id="@+id/btnDropDown"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/rp_blue_background"
                app:srcCompat="@drawable/ic_arrow_down" />

            <TextView
                android:id="@+id/txtPoduzece"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Kraš"
                android:textColor="@color/rp_blue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDatum"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"

                android:text="20.12.2021. 13:00h"
                android:textColor="@color/rp_blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Nedodijeljen"
                android:textColor="@color/rp_red"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/expLayoutPoduzece"
            android:visibility="visible"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:background="@color/rp_blue_very_light">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/company"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/rp_blue"/>
                <TextView
                    android:id="@+id/txtPoduzeceE"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="Kraš"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/rp_blue"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:background="@color/rp_blue_background">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/load_address"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/rp_blue"/>

                <TextView
                    android:id="@+id/txtAdrsUtovarE"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:text="Ul. Julija Merlića 3, 42000, Varaždin"
                    android:textColor="@color/rp_blue"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:background="@color/rp_blue_very_light">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/unload_address"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/rp_blue"/>
                <TextView
                    android:id="@+id/txtAdrsIstovarE"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="Gornje Bazje, 33000, Virovitica"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:textColor="@color/rp_blue"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:background="@color/rp_blue_background">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/date"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/rp_blue"/>

                <TextView
                    android:id="@+id/txtDatumE"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="21.11.2021. 09:00h"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/rp_blue"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:background="@color/rp_blue_very_light">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/goods"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/rp_blue"/>
                <TextView
                    android:id="@+id/txtRobaE"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="Pijesak"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/rp_blue"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:background="@color/rp_blue_background">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/number_neccessary_deliveries"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/rp_blue"/>

                <TextView
                    android:id="@+id/txtBrojTuraE"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="6"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/rp_blue"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:background="@color/rp_blue_very_light">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/status"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/rp_blue"/>
                <TextView
                    android:id="@+id/txtStatusE"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="Nedodijeljen"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/rp_red"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:background="@color/rp_blue_background">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/contact"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/rp_blue"/>

                <TextView
                    android:id="@+id/txtKontaktE"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="098-XXX-XXX"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/rp_blue"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:background="@color/rp_blue_very_light">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/email"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/rp_blue"/>
                <TextView
                    android:id="@+id/txtEmailE"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="kraš@gmail.com"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/rp_blue"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:background="@color/rp_blue_background"
                android:layout_margin="10dp">

                <Button
                    android:id="@+id/btnDodajVozace"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:textSize="11sp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/rp_blue"
                    android:text="@string/add_chauffeurs" />

                <Button
                    android:id="@+id/btnUredi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit"
                    android:layout_gravity="center"

                    android:backgroundTint="@color/rp_blue"/>

                <Button
                    android:id="@+id/btnObrisi"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"

                    android:backgroundTint="@color/rp_blue"
                    android:text="@string/delete"

                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>