<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <LinearLayout
        android:id="@+id/linLayoutDodjelaVozaca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/txtRedniBroj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/white_box"
                android:gravity="center"
                android:text="1"
                android:hint="8"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/rp_blue"
                android:textSize="25sp"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/white_box"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/txtVozacDodaj"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/driver"
                    android:textColor="@color/rp_blue"
                    android:textSize="13sp"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#979797"/>

                <TextView
                    android:id="@+id/txtKamionDodaj"
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textSize="15sp"

                    android:hint="@string/truck"
                    android:textColor="@color/rp_blue" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#979797"/>

                <TextView
                    android:id="@+id/txtPrikolicaDodaj"
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/trailer"
                    android:textSize="15sp"
                    android:textColor="@color/rp_blue" />
            </LinearLayout>
            <ImageButton
                android:id="@+id/btnInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@color/rp_blue_background"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_info"
                android:layout_gravity="center_vertical"/>
            <ImageButton
                android:id="@+id/btnUkloniVozac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/rp_blue_background"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_remove_circle"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>